WHY THEY ALLOW NULL NAMES EXISTENCE